
<resources>
<string name="app_name">자라나무</string>
<string name="title_activity_main">Main</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="action_settings">Settings</string>

<string name="app">자라나무</string>

<string name="permission_checking">권한 확인</string>
<string name="permission_setting_title">권한 설정</string>
<string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야 합니다!</string>
<string name="permission_setting_restart">권한을 설정하고 다시 실행해주세요!</string>


<string name="profile_setting">프로필 설정</string>
<string name="profile_name">NAME</string>
<string name="profile_phone">PHONE</string>
<string name="profile_email">EMAIL</string>
<string name="profile_sensor">SENSOR</string>
<string name="etc">etc</string>

<string name="album">갤러리</string>
<string name="submit">확인</string>
<string name="close">닫기</string>
<string name="cancel">취소</string>
<string name="setting">설정</string>
<string name="prev">이전</string>
<string name="next">다음</string>
<string name="complete">완료</string>


<string name="nav_list">나무상태</string>
<string name="nav_map">나무위치</string>
<string name="nav_profile">프로필</string>

<string name="device_number">DEVICE</string>
<string name="phone_number">PHONE</string>


    <string name="sensor"> Sensors data</string>
    <string name="temp">온 도</string>
    <string name="avtemp">평 균 온 도</string>
    <string name="hum">습 도</string>
    <string name="avhum">평 균 습 도</string>
    <string name="n"> N/A°C </string>
    <string name="nn"> N/A°% </string>
    <string name="time"> hh:mm:ss </string>
    <string name="refresh">refresh</string>


<string name="name_need">이름을 설정해주세요.</string>
<string name="change_save">변경사항을 저장하시겠습니까?</string>

<string name="no_change">변경된 사항이 없습니다.</string>
<string name="no_data">데이터가 없습니다.</string>

<string name="member_insert_fail_message">사용자 등록에 실패하였습니다. 다시 시도해주세요.</string>


<string name="network">네트워크 상태를 확인해주세요.</string>
    <string name="skip_string">  </string>
</resources>
