<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/g1"
        android:checkableBehavior="all">

        // 나무들 목록
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_list" />

        //지도 (나무 어딨는지)
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_map" />

    </group>

    <group
        android:id="@+id/g2"
        android:checkableBehavior="all" >

        //프로필설정
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile2"
            android:title="@string/nav_profile"/>
    </group>
</menu>
