<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/bg_base"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:text="@string/sensor"
            android:textSize="@dimen/hh"
            android:id="@+id/sensorDataTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space16"
        android:textStyle="bold"
        android:textSize="@dimen/h1"
        android:textColor="@color/text_color_white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time"
        android:id="@+id/sensorsDataReceivedTimeTextView"/>



    <!-- temperature -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/space8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space8"
            android:paddingEnd="@dimen/space56"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temp"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:id="@+id/temperatureLabel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/n"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:id="@+id/temperatureValueTextView"/>

    </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space8">

            <TextView
                android:id="@+id/avgTemperatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="29dp"
                android:paddingStart="@dimen/space8"
                android:text="@string/avtemp"
                android:textStyle="bold"
                android:textColor="@color/text_color_white"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:text="@string/n"
            android:id="@+id/avgTemperatureValueTextView"/>

        </LinearLayout>


    <!-- humidity -->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="@dimen/space8"
            android:paddingEnd="@dimen/space56"
            android:text="@string/hum"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:id="@+id/humidityLabel"/>
        <TextView
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nn"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:id="@+id/humidityValueTextView"
            android:layout_width="wrap_content" />

        </LinearLayout>





    <!-- average humidity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="@dimen/space8"
            android:paddingEnd="29dp"
            android:text="@string/avhum"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:id="@+id/avgHumidityLabel"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nn"
            android:textStyle="bold"
            android:textColor="@color/text_color_white"
            android:id="@+id/avgHumidityValueTextView"/>

        </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@color/bg_base"
        android:text="@string/refresh"
        android:textStyle="bold"
        android:textColor="@color/text_color_white"
        android:id="@+id/refreshButton"/>



</LinearLayout>
