<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    //프로필사진


    <RelativeLayout
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/space24"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="top"
            android:src="@drawable/ic_profile"
            app:civ_border_color="#AAAAAA"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/profile_icon_change"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@id/profile_icon"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_circle"
            android:elevation="4dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/camera"
            />


    </RelativeLayout>







    //이름
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space24">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space24"
            android:layout_marginRight="@dimen/space24"

            android:gravity="start"
            android:text="@string/profile_name"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_base"
            android:gravity="start"
            android:inputType="text"
            android:maxLength="7"
            android:maxLines="1"
            android:textSize="@dimen/h3" />
    </LinearLayout>




    //이메일

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space24">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space24"
            android:layout_marginRight="@dimen/space24"
            android:gravity="start"
            android:text="@string/profile_email"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_base"
            android:focusable="false"
            android:gravity="start"
            android:textSize="@dimen/h2" />
    </LinearLayout>




    //핸드폰 번호
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/space24">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space24"
            android:layout_marginRight="@dimen/space24"
            android:gravity="start"
            android:text="@string/profile_phone"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_base"
            android:enabled="false"
            android:gravity="start"
            android:textSize="@dimen/h2" />



    </LinearLayout>



    <TextView
        android:id="@+id/phone_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/space24"
        android:gravity="start"
        android:text="phone"
        android:textSize="@dimen/h2"
        android:textStyle="bold" />







</LinearLayout>
